--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Bonbon|Bungee+Inline|Codystar|Ewert|Fascinate+Inline|Faster+One|Homemade+Apple|Kelly+Slab|Libre+Barcode+39|Love+Ya+Like+A+Sister|Mali|Megrim|Merienda|Pinyon+Script|Shojumaru|UnifrakturCook:700&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
